--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -1,3 +1,12 @@
 ---
 - name: restart iptables
   service: name=iptables state=restarted
+
+- name: refresh sysctl
+  shell: sysctl -p
+
+- name: Yum reload
+  shell: yum clean all
+
+- name: Restart Zabbix agent
+  service: name=zabbix-agent state=restarted
