--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -119,7 +119,7 @@
 - name: Crontab Zabbix agent
   cron: 
     name: Zabbix Agent
-    job: sh /etc/zabbix/bin/iostat-cron.sh /dev/null 2>&1 " >> /var/spool/cron/root
+    job: sh /etc/zabbix/bin/iostat-cron.sh /dev/null 2>&1
     state: present
   tags:
     - zabbixagent
