--- a/site.yml
+++ b/site.yml
@@ -1,28 +1,41 @@
 ---
-- hosts: all
-  remote_user: quang.tong
-  become: True
-  roles:
-    - common
-  vars:
-    host_name: "{{ ansible_hostname }}"
+# - hosts: all
+#   remote_user: quang.tong
+#   become: True
+#   roles:
+#     - common
+#   vars:
+#     host_name: "{{ ansible_hostname }}"
+
+# - hosts: "10.30.70.200"
+#   remote_user: quang.tong
+#   become: True
+#   roles:
+#     - dlapp
+#   vars:
+#     worker_process: 8
+#     predl_domain: pre-dl.dssvti.com
+
+# - hosts: "10.30.70.200"
+#   remote_user: quang.tong
+#   become: True
+#   roles:
+#     - dldb
+#   vars:
+#     appip: 10.76.1.6
+#     postgresuser: odoouser
+#     postgrespassword: 123781
+#     postgresdb: odoodb
 
 - hosts: "10.30.70.200"
   remote_user: quang.tong
   become: True
   roles:
-    - dlapp
+    - dlelastic
   vars:
-    worker_process: 8
-    predl_domain: pre-dl.dssvti.com
-
-- hosts: "10.30.70.200"
-  remote_user: quang.tong
-  become: True
-  roles:
-    - dldb
-  vars:
-    appip: 10.76.1.6
-    postgresuser: odoouser
-    postgrespassword: 123781
-    postgresdb: odoodb
+    elasticurl: https://test.dssvti.com:9200
+    elastuser: elasticsearch
+    elasticuser: elastic
+    elasticpass: "872625"
+    tmpsuperuser: quangtd
+    tmpsuperpass: fuck3doi
