--- a/roles/dldb/handlers/main.yml
+++ b/roles/dldb/handlers/main.yml
@@ -1,3 +1,8 @@
 ---
 - name: Restart Postgresql
   service: name="postgresql-10" state=restarted
+
+- name: Cleanup DB TMP
+  shell: rm -f *dl_pro.bk
+  args:
+    chdir: /root
