--- a/site.yml
+++ b/site.yml
@@ -1,32 +1,29 @@
 ---
-- hosts: all
-  remote_user: infra
+- hosts: "DLAPP,DLELAS"
+  remote_user: ansible
   become: True
   roles:
     - common
-  vars:
-    host_name: "{{ ansible_hostname }}"
 
-- hosts: "DLDB"
-  remote_user: infra
-  become: True
-  roles:
-    - dldb
-  vars:
-    ftpdbrealip: "10.148.0.26"
+# - hosts: "DLDB"
+#   remote_user: infra
+#   become: True
+#   roles:
+#     - dldb
+#   vars:
+#     ftpdbrealip: "10.148.0.26"
 
 - hosts: "DLAPP"
-  remote_user: infra
+  remote_user: ansible
   become: True
   roles:
     - dlapp
   vars:
     worker_process: 8
     predl_domain: pre-dl.dssvti.com
-    ftpapprealip: "10.148.0.25"
 
 - hosts: "DLELAS"
-  remote_user: infra
+  remote_user: ansible
   become: True
   roles:
     - dlelastic
@@ -34,7 +31,7 @@
     elasticurl: https://test.dssvti.com:9200
     elastuser: elasticsearch
     elasticuser: elastic
-    elasticpass: "ddsswe3@!eecfuck"
+    elasticpass: "Fn8rzGMzk14GIqdk3w03"
     tmpsuperuser: quangtd
     tmpsuperpass: quangtd@282!@2333
     testflag: true
